--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
         c++
       })
     </script>
+    <style>
+      div{
+        font-sive: 20;
+        color: black;
+      }
+    </style>
   </body>
 </html>
